--- a/templates/success.html
+++ b/templates/success.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
     <title>Success</title>
+         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+       <link rel="icon" type="image/x-icon" href="/static/wifi.png">
 </head>
 <body>
     <h1>Voucher Purchased Successfully!</h1>
