--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <title>Login</title>
      <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+       <link rel="icon" type="image/x-icon" href="/static/internet.png">
 </head>
 
 <body>
